step 2 search bar styling fixed

--- a/src/app/pages/properties-list/properties-list.component.html
+++ b/src/app/pages/properties-list/properties-list.component.html
@@ -194,15 +194,13 @@
 
 
                             <input type="hidden" #selection>
-                            <div class="input-group mb-3" id="search-bar">
+                            <div class="input-group" id="search-bar">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="inputGroup-sizing-default">
                                         <span class="material-icons" id="search">search</span>
                                     </span>
+                                    <input type="text" class="form-control" id="search-box" placeholder="Enter name or phrase..." aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                                 </div>
-
-                                <input type="text" class="form-control" id="search-box" placeholder="Enter name or phrase..." aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-
                             </div>
 
                             <!-- <div class="card w-100"> -->
